--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 			<img src="imgs/daum.png">
 		</div>
 		<div>
-			<div><img src="imgs/google.png" alt="Hi Google"></div>
+			<div><img src="imgs/google.png" alt="Hi Google"></div>	
+		</div>
+		<div>
+		<div><img src="imgs/git.png" alt="Hello Git"></div>
 		</div>
 	</body>
 </html>
