index.html 상태에서 수정
수정한ㄷ거임

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 		<div>
 		<div><img src="imgs/git.png" alt="Hello Git"></div>
 		</div>
-		
+		<div> 이 메세지는 b1 test remote 에서 추가한ㄷ거임</div>
 	</body>
 </html>
